--- a/files/index.html
+++ b/files/index.html
@@ -3,14 +3,83 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="files/style.css">
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" >
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Matemasie&family=Workbench&display=swap">
     <title>Dashboard demo</title>
 </head>
 <body>
-    <div class="dashboad-container">
-        <div class="header-grid-item">Header</div>
-        <div class="navbar-grid-item">Navbar</div>
-        <div class="body-grid-item">Body</div>
+    <div class="dashboard-container">
+
+        <div class="header-grid-item">
+            <div class="search-input-wrapper"><label for="search-input" class="search-input"><span class="search-emoji"><i class="material-icons">search</i></span> <input type="search"></label></div>
+            <div class="username-greeting"><p>Hi there, <br> Lady Gaga (@pokerface)</p></div>
+            <div class="username"><i class="material-icons">notifications </i><i class="material-icons"> flutter_dash</i><p>Lady Gaga</p></div>
+            <div class="nav-list-grid">
+                <ul>
+                    <li class="nav-list-item1">New</li>
+                    <li class="nav-list-item2">Upload</li>
+                    <li class="nav-list-item3">Share</li>
+                </ul>
+            </div>
+        </div>
+
+        <div class="sidebar-grid-item">
+            <div class="navigation">
+                <h1><span class="icon-1"><i class="material-icons">dashboard</i> </span>Dashboard</h1>
+                <div class="sidebar-top">
+                <ul ><i class="material-icons">home</i> Home</ul>
+                <ul><span class="icon-3"><i class="material-icons">person</i></span> Profile</ul>
+                <ul><span class="icon-4"><i class="material-icons">mail</i></span> Messages</ul>
+                <ul><span class="icon-5"><i class="material-icons">history</i></span> History</ul>
+                <ul><span class="icon-6"><i class="material-icons">list</i></span> Tasks</ul>
+                <ul><span class="icon-7"><i class="material-icons">groups</i></span> Communities</ul>
+                </div>
+                <div class="sidebar-bottom">
+                <ul><span class="icon-8"><i class="material-icons">settings</i></span> Settings</ul>
+                <ul><span class="icon-9"><i class="material-icons">support</i></span> Support</ul>
+                <ul><span class="icon-10"><i class="material-icons">lock</i></span> Privacy</ul>
+                </div>
+            </div>
+        </div>
+
+        <div class="body-grid-item">
+            <div class="projects-wrapper">
+                <h2>Your Projects</h2>
+            <div class="projects">
+                <div class="main-card"><h3>Title</h3><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi eveniet illum accusantium ratione! Tempore minus eos distinctio, debitis velit, qui sapiente nobis eaque illum omnis exercitationem aperiam praesentium eius alias.</p><div><i class="material-icons">share</i><i class="material-icons">visibility</i><i class="material-icons">star</i></div></div>
+                <div class="main-card"><h3>Title</h3><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi eveniet illum accusantium ratione! Tempore minus eos distinctio, debitis velit, qui sapiente nobis eaque illum omnis exercitationem aperiam praesentium eius alias.</p><div><i class="material-icons">share</i><i class="material-icons">visibility</i><i class="material-icons">star</i></div></div>
+                <div class="main-card"><h3>Title</h3><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi eveniet illum accusantium ratione! Tempore minus eos distinctio, debitis velit, qui sapiente nobis eaque illum omnis exercitationem aperiam praesentium eius alias.</p><div><i class="material-icons">share</i><i class="material-icons">visibility</i><i class="material-icons">star</i></div></div>
+                <div class="main-card"><h3>Title</h3><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi eveniet illum accusantium ratione! Tempore minus eos distinctio, debitis velit, qui sapiente nobis eaque illum omnis exercitationem aperiam praesentium eius alias.</p><div><i class="material-icons">share</i><i class="material-icons">visibility</i><i class="material-icons">star</i></div></div>
+                <div class="main-card"><h3>Title</h3><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi eveniet illum accusantium ratione! Tempore minus eos distinctio, debitis velit, qui sapiente nobis eaque illum omnis exercitationem aperiam praesentium eius alias.</p><div><i class="material-icons">share</i><i class="material-icons">visibility</i><i class="material-icons">star</i></div></div>
+                <div class="main-card"><h3>Title</h3><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi eveniet illum accusantium ratione! Tempore minus eos distinctio, debitis velit, qui sapiente nobis eaque illum omnis exercitationem aperiam praesentium eius alias.</p><div><i class="material-icons">share</i><i class="material-icons">visibility</i><i class="material-icons">star</i></div></div>
+            </div>
+            </div>
+            <div class="announcements-wrapper">
+                <h2>Announcements</h2>
+            <div class="announcements">
+                <div class="announcements-card">
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Commodi iure inventore quisquam sapiente deleniti unde.</p><br>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Commodi iure inventore quisquam sapiente deleniti unde.</p><br>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Commodi iure inventore quisquam sapiente deleniti unde.</p>
+                </div>
+            </div>
+            </div>
+            <div class="trending-wrapper">
+            <h2>Trending</h2>
+            <div class="trending">
+                <div class="trending-card">
+                    <ul>
+                        <li class="trend-1">Lorem ipsum, dolor sit amet</li>
+                        <li class="trend-1">Lorem ipsum, dolor sit amet</li>
+                        <li class="trend-1">Lorem ipsum, dolor sit amet</li>
+                        <li class="trend-1">Lorem ipsum, dolor sit amet</li>
+                    </ul>
+                </div>
+                </div>
+            </div>
+        </div>
     </div>
 </body>
 </html>
